# leboncours

./: .gitignore  Cargo.toml  README.md  ca.pem
db/: create_table.sql  insert.sql
frontend/leboncours/: package-lock.json  package.json
prompts/: insert-tables.md
src/: database.rs  main.rs  server.rs
src/api/: error.rs  mod.rs  update.rs
src/api/bookings/: dto.rs
src/api/courses/: mod.rs
src/api/users/: handlers.rs
src/entities/: availabilities.rs  bookings.rs  courses.rs  eventcourses.rs  messages.rs  messagesusers.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  skills.rs  teachercourses.rs  users.rs
src/model/: bookings.rs  skills.rs  users.rs
src/server/: api_routes.rs  fn_path.rs  path.rs
