[package]
name = "WebArchi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1", features = [ "runtime-tokio-rustls", "sqlx-postgres", "macros" ] }