[package]
name = "WebArchi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-rustls", "sqlx-postgres", "macros" ] }